# uibk_parallelization_24_my_own

./: .clang-format  readme.md  remote_setup.md
assignments/02/: CMakeLists.txt  mandelbrot_mpi.cpp  mandelbrot_seq.cpp  readme.md
code_parallel/: CMakeLists.txt
code_parallel/apps/: CMakeLists.txt  main_full_code.cpp  main_full_code_parallel.cpp
code_parallel/include/IO/: data_storage.hpp  data_storage_parallel.hpp  hdf5_definitions.hpp
code_parallel/include/setup/: grid.hpp  grid1D.hpp  mpi_handler.hpp
code_parallel/include/solver/: Riemann_solvers.hpp  finite_volume_solver.hpp  limiter.hpp
code_parallel/include/util/: matrix.hpp
code_parallel/src/: CMakeLists.txt
code_parallel/src/IO/: CMakeLists.txt  data_storage.cpp  data_storage_parallel.cpp
code_parallel/src/setup/: CMakeLists.txt  fluid.cpp  grid.cpp  mpi_handler.cpp  physics.cpp
code_parallel/src/solver/: CMakeLists.txt  Riemann_solver_HLL.cpp  Riemann_solvers.cpp  finite_volume_solver.cpp  limiter.cpp  reconstruction.cpp  singlestep.cpp  singlestep_flux_based.cpp  time_integrator.cpp
code_parallel/src/util/: CMakeLists.txt  matrix.cpp
code_parallel/tests/: CMakeLists.txt  test_limiter.cpp  test_physics.cpp  tests_Riemann_solvers.cpp
code_students/: CMakeLists.txt
code_students/apps/: CMakeLists.txt  main_full_code.cpp  main_test_singlesteps.cpp
code_students/include/IO/: data_storage.hpp
code_students/include/core/: config.hpp
code_students/include/setup/: fluid.hpp  physics.hpp
code_students/include/solver/: finite_volume_solver.hpp  limiter.hpp  reconstruction.hpp  time_integrator.hpp
code_students/include/util/: matrix.hpp  utility_functions.hpp
code_students/scripts/: ShowDataPlane.py
code_students/src/IO/: CMakeLists.txt  data_storage.cpp
code_students/src/setup/: CMakeLists.txt  grid1D.cpp  physics.cpp
code_students/src/solver/: CMakeLists.txt  Riemann_solver_HLL.cpp  finite_volume_solver.cpp  limiter.cpp  reconstruction.cpp  time_integrator.cpp
code_students/src/util/: matrix.cpp
code_students/tests/: CMakeLists.txt  test_time_integrator.cpp
docs/: index.html
